clusters/dev/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: ml-platform-envoy
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: ml-platform-local
  namespace: ml-platform-system
spec:
  gatewayClassName: ml-platform-envoy
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: ml-platform-local-hostport
  listeners:
    - name: http
      hostname: gateway.ml-platform.local
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
